feat: add intro secttion
Added intro section.

Note: Cleaned up global.css as per tailwind docs advocating
to not use `@apply` just to make things look "cleaner"
https://www.tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,11 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --bg-red: #fbe2e3;
-  --bg-blue: #dbd7fb;
-}
-
 body {
-  @apply text-gray-950 relative bg-gradient-to-t from-[var(--bg-red)] to-[var(--bg-blue)];
+  @apply text-dark relative bg-[rgb(240,231,219)];
 }
