feat: add light-dark theme switcher
added favicon, added resume

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,9 @@ html {
   --line-color: #f4f9fc;
 }
 
+html.dark {
+  --line-color: rgba(255, 255, 255, 0.05);
+}
 body {
   @apply text-dark relative bg-cream;
 }
